--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,8 +1,3 @@
-$grid-breakpoints: (
-  xs: 0,
-  sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1400px
-);
+
+
+/*# sourceMappingURL=estilos.scss.map */
