--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,3 +1,18 @@
+@import "navegador";
+@import "fuente";
+@import "main";
+@import "articulo";
+@import "ayuda";
+@import "registro";
+@import "acceder";
 
 
-/*# sourceMappingURL=estilos.scss.map */
+
+$color-fondo: rgba(30, 27, 27, 1) ;
+$color-fondo-secundario: #393939;
+$color-letra: aliceblue ;
+$fuente:´fuente-principal´;
+
+
+
+
