--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,12 +18,6 @@
   background-color: #272727;
 }
 
-.separador {
-  display: grid;
-  width: 400px;
-  background-color: #272727;
-}
-
 .logo {
   width: 50px;
   height: 50px;
@@ -70,6 +64,63 @@ ul:hover .estilo-link:hover {
   box-shadow: 0 2px 0 0 currentColor;
 }
 
+@media (min-width: 0px) {
+  .flex-contenedor {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-items: end;
+    background-color: #272727;
+  }
+  .logo {
+    display: none;
+  }
+  .estilo-link {
+    text-decoration: none;
+    color: white;
+    text-transform: none;
+    transition: 0.25s ease;
+    margin-top: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 12px;
+    font-family: ´fuente-principal´;
+    background-color: #272727;
+  }
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    background-color: #272727;
+    padding: 0;
+  }
+}
+@media (min-width: 576px) {
+  .logo {
+    display: block;
+    width: 50px;
+    height: 50px;
+    margin-top: 10px;
+    padding: auto;
+    margin-right: 30px;
+    margin-left: 30px;
+    background-color: #272727;
+  }
+}
+@media (min-width: 768px) {
+  .estilo-link {
+    text-decoration: none;
+    color: white;
+    text-transform: none;
+    transition: 0.25s ease;
+    margin-top: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 20px;
+    font-family: ´fuente-principal´;
+    background-color: #272727;
+  }
+}
 @font-face {
   font-family: ´fuente-principal´;
   src: url(../asssets/font/Bebas_Neue/BebasNeue-Regular.ttf);
@@ -78,9 +129,19 @@ ul:hover .estilo-link:hover {
   font-family: ´fuente-principal´;
 }
 
-.imagen-principal {
-  height: 700px;
-  width: 2000px;
+.contenedor-video {
+  display: flex;
+  justify-content: center;
+}
+
+.video {
+  width: auto;
+  height: 600px;
+  background-color: black;
+}
+
+.carousel-inner {
+  background-color: black;
 }
 
 .carousel-caption {
@@ -91,6 +152,11 @@ ul:hover .estilo-link:hover {
   background: none;
   font-family: ´fuente-principal´;
   font-size: 64px;
+}
+
+.link-titulo {
+  text-decoration: none;
+  color: white;
 }
 
 .boton-titulo {
@@ -184,9 +250,20 @@ ul:hover .estilo-link:hover {
 
 .img {
   border-radius: 20px;
-  width: 335px;
-  height: 200px;
-  margin-top: 30px;
+  width: 220px;
+  height: 220px;
+  background-color: white;
+}
+
+.fondo-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  width: 350px;
+  height: 250px;
+  margin-top: 20px;
+  border-radius: 20px;
 }
 
 .contedor-modelo {
@@ -205,6 +282,7 @@ ul:hover .estilo-link:hover {
   font-size: 24px;
   margin-bottom: 20px;
   margin-left: 10px;
+  font-weight: normal;
 }
 
 .envio-gratis {
@@ -758,16 +836,6 @@ ul:hover .estilo-link:hover {
   font-family: "Inter", sans-serif;
 }
 
-.logo_container {
-  box-sizing: border-box;
-  width: 80px;
-  height: 80px;
-  background: linear-gradient(180deg, rgba(248, 248, 248, 0) 50%, rgba(248, 248, 248, 0.5333333333) 100%);
-  border: 1px solid #F7F7F8;
-  filter: drop-shadow(0px 0.5px 0.5px #EFEFEF) drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
-  border-radius: 11px;
-}
-
 .title_container {
   display: flex;
   flex-direction: column;
@@ -891,6 +959,45 @@ ul:hover .estilo-link:hover {
   font-size: 0.75rem;
   color: #8B8E98;
   text-decoration: underline;
+}
+
+.main-moviles {
+  background-image: url(../asssets/letra-j\ \(2\)\ 1.png);
+  background-color: #272727;
+  height: 4000px;
+}
+
+.contenedor-marca {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 150px;
+  margin-top: 30px;
+}
+
+.items-moviles {
+  text-decoration: none;
+  font-family: ´fuente-principal´;
+  color: aliceblue;
+  font-size: 24px;
+  margin: 20px;
+  background-color: #595959;
+}
+
+.estilo-marca {
+  display: flex;
+  justify-content: center;
+  background-color: #595959;
+}
+
+.titulo-item {
+  font-family: ´fuente-principal´;
+  font-size: 24px;
+  color: white;
+  font-weight: normal;
+  padding: 20px;
+  background-color: #c149e6;
+  border-color: #272727;
 }
 
 /*# sourceMappingURL=estilos.css.map */
