--- a/css/navegador.css
+++ b/css/navegador.css
@@ -18,12 +18,6 @@
   background-color: #272727;
 }
 
-.separador {
-  display: grid;
-  width: 400px;
-  background-color: #272727;
-}
-
 .logo {
   width: 50px;
   height: 50px;
@@ -68,6 +62,64 @@ ul:hover .estilo-link {
 ul:hover .estilo-link:hover {
   color: #8EAAFB;
   box-shadow: 0 2px 0 0 currentColor;
+}
+
+@media (min-width: 0px) {
+  .flex-contenedor {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-items: end;
+    background-color: #272727;
+  }
+  .logo {
+    display: none;
+  }
+  .estilo-link {
+    text-decoration: none;
+    color: white;
+    text-transform: none;
+    transition: 0.25s ease;
+    margin-top: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 12px;
+    font-family: ´fuente-principal´;
+    background-color: #272727;
+  }
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    background-color: #272727;
+    padding: 0;
+  }
+}
+@media (min-width: 576px) {
+  .logo {
+    display: block;
+    width: 50px;
+    height: 50px;
+    margin-top: 10px;
+    padding: auto;
+    margin-right: 30px;
+    margin-left: 30px;
+    background-color: #272727;
+  }
+}
+@media (min-width: 768px) {
+  .estilo-link {
+    text-decoration: none;
+    color: white;
+    text-transform: none;
+    transition: 0.25s ease;
+    margin-top: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 20px;
+    font-family: ´fuente-principal´;
+    background-color: #272727;
+  }
 }
 
 /*# sourceMappingURL=navegador.css.map */
