--- a/scss/articulo.scss
+++ b/scss/articulo.scss
@@ -30,10 +30,23 @@
 
 .img{
     border-radius: 20px;
-    width: 335px;
-    height: 200px;
-    margin-top: 30px;
+    width: 220px;
+    height: 220px;
+    
+    
+    background-color: white;
 
+
+}
+.fondo-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    width: 350px;
+    height: 250px;
+    margin-top: 20px;
+    border-radius: 20px;
 
 }
 .contedor-modelo{
@@ -53,6 +66,7 @@
     font-size: 24px;
     margin-bottom: 20px;
     margin-left: 10px;
+    font-weight: normal;
 }
 
 
