--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,20 @@
 
 
-.imagen-principal{
-    height: 700px;
-    width: 2000px;
-    }
+.contenedor-video{
+    display: flex;
+    justify-content: center;
+}
+.video{
+    width: auto;
+    height: 600px;
+    background-color: black;
+    
+}
+.carousel-inner{
+  
+    background-color: black;
+
+}
 .carousel-caption{
     background: none;
 }   
@@ -11,6 +22,10 @@
     background: none;
     font-family: ´fuente-principal´;
     font-size: 64px;
+}
+.link-titulo{
+    text-decoration: none;
+    color: white;
 }
 
 .boton-titulo {
@@ -75,3 +90,5 @@
     margin-left: 100px;
     background-color: #272727;
   }
+
+
