--- a/css/acceder.css
+++ b/css/acceder.css
@@ -162,4 +162,9 @@
   text-decoration: underline;
 }
 
+.boto-ingresar {
+  text-decoration: none;
+  color: #272727;
+}
+
 /*# sourceMappingURL=acceder.css.map */
