--- a/scss/acceder.scss
+++ b/scss/acceder.scss
@@ -174,6 +174,10 @@
     color: #8B8E98;
     text-decoration: underline;
   }
+  .boto-ingresar{
+    text-decoration: none;
+    color: #272727;
+  }
   
   
       
