--- a/scss/_ayuda.scss
+++ b/scss/_ayuda.scss
@@ -106,6 +106,7 @@ text-decoration-line: underline;
         margin: 15px;
         border-radius: 20px;
     }
+    
 
 }
 @media (min-width: 768px) and (max-width: 992px){
@@ -129,5 +130,63 @@ text-decoration-line: underline;
         border-radius: 20px;
     }
 
+
+}
+@media (min-width: 575.98px) and (max-width: 768px){
+    .titulo-ayuda{
+        background-color: #272727;
+        height: 100px;
+        font-family: ´fuente-principal´;
+        color: aliceblue;
+        font-size: 42px;
+    }
+    .carta-contacto{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        width: 250px;
+        height: 304px;
+        flex-shrink: 0;
+        background-color: #575757;
+        margin: 5px;
+        border-radius: 20px;
+    }
+    .contenedor-contacto{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: #272727;
+    }
+
+
+}
+@media (min-width: 0px) and (max-width: 575.98px){
+    .titulo-ayuda{
+        background-color: #272727;
+        height: 100px;
+        font-family: ´fuente-principal´;
+        color: aliceblue;
+        font-size: 35px;
+    }
+    .carta-contacto{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        width: 250px;
+        height: 304px;
+        flex-shrink: 0;
+        background-color: #575757;
+        margin: 5px;
+        border-radius: 20px;
+    }
+    .contenedor-contacto{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: #272727;
+        align-items: center;
+    }
 
 }
