--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1359,6 +1359,7 @@ ul:hover .estilo-link:hover {
   flex-wrap: wrap;
   margin: 150px;
   margin-top: 30px;
+  justify-content: center;
 }
 
 .items-moviles {
