--- a/scss/_navegador.scss
+++ b/scss/_navegador.scss
@@ -16,10 +16,33 @@
     align-items: center;
     justify-items: end;
     background-color: #272727;
+    height: 80px;
   
   }
+.carrito{
+  background-color: none;
+  position: fixed;
+    top: 0;
+    right: 0;
+    width: 300px;
+    background-color: #272727;
+    color: white;
+    z-index: 1000;
   
-   
+}
+  
+ .img-carrito{
+  background: none;
+ }   
+#toggleCarrito{
+  
+  background: none;
+  border: none;
+}   
+
+
+
+
 
   
   .logo {
@@ -50,6 +73,7 @@
     flex-wrap: wrap;
     list-style: none;
     background-color: #272727;
+    align-items: center;
   }
   
   ul{
